# templ-sub

./: .gitignore  README.org  pyproject.toml
src/templ_sub/: __init__.py  templsub.py
templsub/: __init__.py  templsub.py
