[tool.poetry]
name = "templ-sub"
version = "0.1.0"
description = "Generate directories and files using substitutions in a template"
authors = ["John Bonini <jrbp@user.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
